@@ -38,10 +38,6 @@ loadLangFile("pgv_confighelp");
 
 require_once 'includes/classes/class_person.php';
 
-$indifacts = array();			 // -- array to store the fact records in for sorting and displaying
-$globalfacts = array();
-$otheritems = array();			  //-- notes, sources, media objects
-$FACT_COUNT=0;
 // -- array of GEDCOM elements that will be found but should not be displayed
 $nonfacts[] = "FAMS";
 $nonfacts[] = "FAMC";
